Update and rename config.dev.json to config.json

--- a/config.json
+++ b/config.json
@@ -1,15 +1,12 @@
 {
-  "obfuscatedKeys": {
-    "secureRootCodeV2": "MTAwMDE0NzU0NzM0MDQ5"},
-  "autoInjectUID": true,
   "facebookAccount": {
     "email": "",
     "password": "",
     "2FASecret": "",
-    "i_user": null,
+    "i_user": "",
     "proxy": null,
     "userAgent": "Mozilla/5.0 (Linux; Android 12; M2102J20SG) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/101.0.0.0 Mobile Safari/537.36",
-    "intervalGetNewCookie": null,
+    "intervalGetNewCookie": 1440,
     "notes": "time the system automatically retrieves new cookies from email/password, unit is minute, if you set null, the system will not automatically retrieve new cookies, it saves you from having to manually change your cookie every time it expires. recommended set to 1440 (1day) or 4320 (3day).TO BE ABLE TO USE THIS FEATURE YOU NEED TO ENTER THE ACCOUNT PASSWORD ABOVE"
   },
   "antiInbox": false,
@@ -17,23 +14,22 @@
   "notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
   "adminOnly": {
     "enable": false,
-    "ignoreCommand": ["emojireply.js"]
+    "ignoreCommand": []
   },
-  
   "adminBot": [
     "100014754734049",
-    "100085332887575",
+    "61552591230081"
+  ],
+  "vip": [
+    "100014754734049",
     "61552591230081"
   ],
   "whiteListMode": {
     "enable": false,
-    "whiteListIds": [ 
-      "100014754734049",
-      "100085332887575"
-    ],
+    "whiteListIds": [100014754734049],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "‌♡your baby♡",
+  "nickNameBot": "🪽🐰 Your Baby🔥🩷",
   "prefix": "!",
   "api": "https://mahabub-apis.fun",
   "database": {
@@ -44,12 +40,13 @@
     "notes": "(1) type selects 'json' or 'sqlite' or 'mongodb'. If you choose mongodb, enter uri connect mongodb in the uriMongodb section, instructions to get uri connect mongodb at: https://youtu.be/z1f9urHW5xY. I recommend using 'mongodb' or 'sqlite', json is not recommended because it is not stable. (2) when you set autoSyncWhenStart to true, the bot will automatically synchronize the data in the database when starting the bot, this will make the bot start slower. (3) when you set autoRefreshThreadInfoFirstTime to true, the bot will automatically refresh the thread information when get first message from the thread since starting the bot"
   },
   "timeZone": "Asia/Dhaka",
-  	"credentials": {
-    "gmailAccount": {
-      "email": "fariasdipto@gmail.com",
-      "clientId": "356551796908-109qeba7nv0e30u2c7o22gr9podqsiim.apps.googleusercontent.com",
-      "clientSecret": "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",
-      "refreshToken": "1//04otrr7tUfUAFCgYIARAAGAQSNwF-L9IrnanDeaer7kPniPX_EdWPKNnf4_z7ONCUcR5Jp6_kcSXWKAND0inf-n1Yv1LRryIKNhY"
+  "credentials": {
+  "gmailAccount": {
+      "email": "mpk852546@gmail.com",
+      "clientId": "468637297192-06rlphmj6lohjaj87l9f2faugjpvjo2m.apps.googleusercontent.com",
+      "clientSecret": "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",
+      "refreshToken": "1//04HwrGyc1o84yCgYIARAAGAQSNwF-L9IrUgry1nG4YkdzjTCMo2dHLKsXrCnebeUNyfo5W-LeiqRo76BM6K48I1EKjIvwpTwO3xI",
+      "apiKey": ""
     },
     "gRecaptcha": {
       "siteKey": "6Lff7Y0mAAAAALiv3IBkCCOfCdEsN-lK-jtR5FCm",
