--- a/config.json
+++ b/config.json
@@ -17,11 +17,11 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "100014754734049",
-    "61552591230081"
+    "61586540721576",
+    "61583503117228"
   ],
   "vip": [
-    "100014754734049",
+    "61586540721576",
     "61552591230081"
   ],
   "whiteListMode": {
@@ -29,8 +29,8 @@
     "whiteListIds": [100014754734049],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "🪽🐰 Your Baby🔥🩷",
-  "prefix": "!",
+  "nickNameBot": "🪽🐰 Your Milon🔥🩷",
+  "prefix": ".",
   "api": "https://mahabub-apis.fun",
   "database": {
     "type": "mongodb",
